changed setting env variabel

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,14 +11,14 @@ fint:
     application-id: ${fint.application-id}
     default-replicas: 1
   kontroll:
-    days-before-start: 0
+#    days-before-start: 0
     user:
       publishing:
         initial-delay: 20000
         initial-delay-elev: 30000
         fixed-delay: 900000
-      days-before-start-employee: 0
-      days-before-start-student: 0
+      days-before-start-employee: 10
+      days-before-start-student: 5
 spring:
   kafka:
     consumer:
