--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ fint:
       publishing:
         initial-delay: 20000
         initial-delay-elev: 30000
-        fixed-delay: 3600000
+        fixed-delay: 900000
       days-before-start-employee: 10
       days-before-start-student: 5
 spring:
